# ooodev-gui-win

./: README.md  pyproject.toml
oxt/: description.xml
oxt/resources/: pipstrings_en_US.properties
