[tool.oxt.config]
auto_install_in_site_packages = true
build_dir = "build"
dist_dir = "dist"
install_wheel = false
log_pip_installs = false
oxt_name = "OooDevGuiWin"
pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
py_pkg_dir = "py_pkgs"
py_pkg_files = []
py_pkg_names = []
test_internet_url = "https://duckduckgo.com"
token_file_ext = ["txt", "xml", "xcu"]
update_file = "update.xml"
zip_preinstall_pure = true


[tool.oxt.token]
# in the form of "token_name": "token_value"
# in the files the token will have a prefix and suffix of ___
lo_identifier = "org.openoffice.extensions.ooodevguiwin"
lo_implementation_name = "OooDevGuiWin"
display_name_en_us = "GUI Automation for LibreOffice"
description_en_us = "Add GUI Automation Software to LibreOffice in Windows"
publisher_en_us = "AmourSpirit"
publisher_url = "https://github.com/Amourspirit/ooodev-gui-win-ext"
update_url_xml = "https://raw.githubusercontent.com/Amourspirit/ooodev-gui-win-ext/main/___dist_dir___/___update_file___"
update_url_oxt = "https://raw.githubusercontent.com/Amourspirit/ooodev-gui-win-ext/main/___dist_dir___/___oxt_name___.oxt"
url_pip = 'https://bootstrap.pypa.io/get-pip.py'
# set log_file to "" to disable logging
log_file = "ooodevguiwin_install.log"
log_name = "OOODEV GUI Win Installer"
log_level = "INFO" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
# log_format = "%(levelname)s [%(module)s.py][%(funcName)s::%(lineno)d] %(message)s"
lo_pip = "lo_ooo_dev_gui_win"

[tool.oxt.requirements]
# https://python-poetry.org/docs/dependency-specification/
ooo-dev-tools-gui-win = ">=0.3.2"


[tool.oxt.preinstall.pure]
# verr = ">=1.1.2"

[tool.poetry]
name = "LibreOffice GUI Automation for Windows"
version = "0.3.2"
description = "LibreOffice GUI Automation for Windows"
authors = [":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
ooouno = "^2.1.2"
ooo-dev-tools = "0.12.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
types-scriptforge = ">=2.0.1"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"
black = "^23.7.0"
oooscript = "^1.1.3"
oooenv = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    no-name-in-module,
    no-self-argument
"""

[tool.pyright]
include = ["src"]
reportMissingModuleSource = false

[tool.ruff]
extended-select = ["ANN", "C4", "N", "SIM", "TCH"]
ignore = ["E501"]
show-fixes = true
target = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]

markers = [
    "skip_headless: skips a test in headless mode",
    "skip_not_headless_os: skips a test in GUI mode for give os",
]
